--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "homepage": "https://github.com/m-umairaftab/namaste-react#readme",
   "devDependencies": {
-    "parcel": "^2.13.3",
+    "parcel": "^2.8.3",
     "process": "^0.11.10"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2"
   },
   "browserList": [
     "last 2 versions"
