--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.11.2",
     "tailwindcss": "^4.0.14"
   },
